[package]
name = "decthings-model"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1"
byte-slice-cast = "1.2"
decthings-api = { version = "0.1", default-features = false }
futures = "0.3"
lazy_static = "1.4"
ndarray = "0.15"

[target.'cfg(target_family = "unix")'.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "net", "sync", "fs", "rt"] }

[target.'cfg(target_family = "wasm")'.dependencies]
pollster = "0.3"

[target.'cfg(not(target_endian = "little"))'.dependencies]
byteorder = "1.5"
